--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -21,6 +21,9 @@
     
     <!-- API Configuration -->
     <script src="api-config.js"></script>
+    
+    <!-- Main Application Script -->
+    <script src="taskpane.js"></script>
 </head>
 
 <body class="ms-font-m ms-welcome ms-Fabric">
@@ -35,15 +38,15 @@
         <ul class="ms-List ms-welcome__features">
             <li class="ms-ListItem">
                 <i class="ms-Icon ms-Icon--Robot ms-font-xl"></i>
-                <span class="ms-font-m">AI智能回复建议</span>
+                <span class="ms-font-m">深度翻译</span>
             </li>
             <li class="ms-ListItem">
                 <i class="ms-Icon ms-Icon--Edit ms-font-xl"></i>
-                <span class="ms-font-m">邮件内容优化</span>
+                <span class="ms-font-m">生成摘要</span>
             </li>
             <li class="ms-ListItem">
                 <i class="ms-Icon ms-Icon--Chat ms-font-xl"></i>
-                <span class="ms-font-m">智能对话助手</span>
+                <span class="ms-font-m">生成回复</span>
             </li>
         </ul>
         <p class="ms-font-l">点击开始按钮开始使用AI功能</p>
