--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -28,31 +28,47 @@
 
 <body class="ms-font-m ms-welcome ms-Fabric">
     <header class="ms-welcome__header ms-bgColor-neutralLighter">
-        <h1 class="ms-font-su">GPTBots Copilot</h1>
+        <img src="../../assets/GPTBots-blackicon.png" alt="GPTBots" class="gptbots-logo" />
     </header>
     <section id="sideload-msg" class="ms-welcome__main">
         <h2 class="ms-font-xl">Please <a target="_blank" rel="noopener noreferrer" href="https://learn.microsoft.com/office/dev/add-ins/testing/test-debug-office-add-ins#sideload-an-office-add-in-for-testing">sideload</a> your add-in to see app body.</h2>
     </section>
-    <main id="app-body" class="ms-welcome__main" style="display: none;">
-        <h2 class="ms-font-xl">智能AI助手，提升您的邮件效率</h2>
+    <main id="app-body" class="ms-welcome__main gptbots-app-body">
+        <h2 class="ms-font-xl">AI 技能</h2>
         <ul class="ms-List ms-welcome__features">
-            <li class="ms-ListItem">
+            <li class="ms-ListItem gptbots-feature-item">
                 <i class="ms-Icon ms-Icon--Robot ms-font-xl"></i>
                 <span class="ms-font-m">深度翻译</span>
             </li>
-            <li class="ms-ListItem">
+            <li class="ms-ListItem gptbots-feature-item">
                 <i class="ms-Icon ms-Icon--Edit ms-font-xl"></i>
                 <span class="ms-font-m">生成摘要</span>
             </li>
-            <li class="ms-ListItem">
+            <li class="ms-ListItem gptbots-feature-item">
                 <i class="ms-Icon ms-Icon--Chat ms-font-xl"></i>
                 <span class="ms-font-m">生成回复</span>
             </li>
         </ul>
-        <p class="ms-font-l">点击开始按钮开始使用AI功能</p>
-        <div role="button" id="run" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
-            <span class="ms-Button-label">开始使用</span>
+        
+        <!-- 结果预览框 -->
+        <div id="result-preview" class="gptbots-preview-box gptbots-hidden">
+            <h3 class="ms-font-l">AI 处理结果</h3>
+            <div id="preview-content" class="gptbots-preview-content">
+                <div id="loading-indicator" class="gptbots-loading gptbots-hidden">
+                    <div class="ms-Spinner ms-Spinner--large">
+                        <div class="ms-Spinner-circle"></div>
+                    </div>
+                    <p>AI正在处理中...</p>
+                </div>
+                <div id="result-text" class="gptbots-result-text"></div>
+            </div>
+            <div class="gptbots-preview-actions">
+                <button id="copy-result" class="gptbots-action-btn">复制结果</button>
+                <button id="use-result" class="gptbots-action-btn gptbots-primary">使用结果</button>
+                <button id="close-preview" class="gptbots-action-btn">关闭</button>
+            </div>
         </div>
+        
         <p><label id="item-subject"></label></p>
     </main>
 </body>
