--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -28,23 +28,26 @@
 
 <body class="ms-font-m ms-welcome ms-Fabric">
     <main id="app-body" class="ms-welcome__main gptbots-app-body">
-        <h2 class="ms-font-xl">AI 技能</h2>
-        <ul class="ms-List ms-welcome__features">
-            <li class="ms-ListItem gptbots-feature-item">
-                <i class="ms-Icon ms-Icon--Robot ms-font-xl"></i>
-                <span class="ms-font-m">深度翻译</span>
-            </li>
-            <li class="ms-ListItem gptbots-feature-item">
-                <i class="ms-Icon ms-Icon--Edit ms-font-xl"></i>
-                <span class="ms-font-m">生成摘要</span>
-            </li>
-            <li class="ms-ListItem gptbots-feature-item">
-                <i class="ms-Icon ms-Icon--Chat ms-font-xl"></i>
-                <span class="ms-font-m">生成回复</span>
-            </li>
-        </ul>
+        <div class="gptbots-content-area">
+            <h2 class="ms-font-xl">AI 技能</h2>
+            <ul class="ms-List ms-welcome__features">
+                <li class="ms-ListItem gptbots-feature-item">
+                    <i class="ms-Icon ms-Icon--Robot ms-font-xl"></i>
+                    <span class="ms-font-m">深度翻译</span>
+                </li>
+                <li class="ms-ListItem gptbots-feature-item">
+                    <i class="ms-Icon ms-Icon--Edit ms-font-xl"></i>
+                    <span class="ms-font-m">生成摘要</span>
+                </li>
+                <li class="ms-ListItem gptbots-feature-item">
+                    <i class="ms-Icon ms-Icon--Chat ms-font-xl"></i>
+                    <span class="ms-font-m">生成回复</span>
+                </li>
+            </ul>
+            <p><label id="item-subject"></label></p>
+        </div>
         
-        <!-- 结果预览框 -->
+        <!-- 结果预览框 - 固定在底部 -->
         <div id="result-preview" class="gptbots-preview-box gptbots-hidden">
             <h3 class="ms-font-l">AI 处理结果</h3>
             <div id="preview-content" class="gptbots-preview-content">
@@ -57,13 +60,11 @@
                 <div id="result-text" class="gptbots-result-text"></div>
             </div>
             <div class="gptbots-preview-actions">
-                <button id="copy-result" class="gptbots-action-btn">复制结果</button>
-                <button id="use-result" class="gptbots-action-btn gptbots-primary">使用结果</button>
+                <button id="copy-result" class="gptbots-action-btn">复制</button>
+                <button id="use-result" class="gptbots-action-btn gptbots-primary">使用</button>
                 <button id="close-preview" class="gptbots-action-btn">关闭</button>
             </div>
         </div>
-        
-        <p><label id="item-subject"></label></p>
     </main>
 </body>
 
